--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
     app:startDestination="@id/pokedexListFragment">
-
     <fragment
         android:id="@+id/capturedPokemonListFragment"
-        android:name="com.yinya.bellidoserranadrianapmdm03.CapturedPokemonListFragment"
+        android:name="com.yinya.bellidoserranadrianapmdm03.ui.CapturedPokemonListFragment"
         android:label="CapturedPokemonListFragment" />
     <fragment
         android:id="@+id/pokedexListFragment"
-        android:name="com.yinya.bellidoserranadrianapmdm03.PokedexListFragment"
+        android:name="com.yinya.bellidoserranadrianapmdm03.ui.PokedexListFragment"
         android:label="PokedexListFragment" />
 </navigation>
