--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#ff0000</color>
+    <color name="dark_red">#cc0000</color>
+    <color name="blue">#3b4cca</color>
+    <color name="yellow">#ffde00</color>
 </resources>
