--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,13 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/pokedexListFragment">
-    <fragment
-        android:id="@+id/capturedPokemonListFragment"
-        android:name="com.yinya.bellidoserranadrianapmdm03.ui.CapturedPokemonListFragment"
-        android:label="CapturedPokemonListFragment" />
-    <fragment
-        android:id="@+id/pokedexListFragment"
-        android:name="com.yinya.bellidoserranadrianapmdm03.ui.PokedexListFragment"
-        android:label="PokedexListFragment" />
+    app:startDestination="@id/nav_pokedex">
+
+    <include app:graph="@navigation/nav_captured_pokemon" />
+    <include app:graph="@navigation/nav_pokedex" />
+    <include app:graph="@navigation/nav_settings" />
 </navigation>
