Finish layout designs

--- a/app/src/main/res/layout/fragment_captured_pokemon_list.xml
+++ b/app/src/main/res/layout/fragment_captured_pokemon_list.xml
@@ -15,5 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="20"
-               />
+        tools:listitem="@layout/card_list_captured_pokemon_item" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
