--- a/app/src/main/res/layout/card_list_captured_pokemon_item.xml
+++ b/app/src/main/res/layout/card_list_captured_pokemon_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,79 +7,166 @@
 
     <com.google.android.material.card.MaterialCardView
 
-        android:id="@+id/cv_captured_pokemon_list"
+        android:id="@+id/mcv_captured_pokemon_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/small_margin"
         android:backgroundTint="?attr/colorSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_captured_pokemon_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/iv_captured_pokemon_item_list"
-                android:layout_width="145dp"
-                android:layout_height="145dp"
+                android:id="@+id/iv_captured_pokemon_item"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                android:layout_marginVertical="@dimen/default_padding"
                 android:contentDescription="@string/captured_pokemon_view_card_view_image_description"
-                android:scaleType="centerCrop"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/constraint_captured_pokemon_list"
+                app:layout_constraintTop_toTopOf="@id/constraint_captured_pokemon_list"
+                tools:srcCompat="@drawable/front_default_img" />
 
             <TextView
-                android:id="@+id/tv_captured_pokemon_item_list_name"
+                android:id="@+id/tv_captured_pokemon_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                tools:text="Nombre pokemon" />
+                android:layout_marginStart="@dimen/small_horizontal_margin"
+                android:textAppearance="?attr/textAppearanceTitleLarge"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_captured_pokemon_item_id"
+                app:layout_constraintStart_toEndOf="@id/tv_captured_pokemon_item_id"
+                app:layout_constraintTop_toTopOf="@+id/tv_captured_pokemon_item_id"
+                tools:text="Bulbasaur" />
+
             <TextView
-                android:id="@+id/tv_captured_pokemon_item_list_id"
+                android:id="@+id/tv_captured_pokemon_item_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                tools:text="Id pokemon" />
+                android:layout_marginTop="@dimen/small_vertical_margin"
+                android:text="@string/pokemon_captured_types_title"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/tv_captured_pokemon_item_type_list"
+                app:layout_constraintStart_toStartOf="@+id/tv_captured_pokemon_item_id"
+                app:layout_constraintTop_toBottomOf="@+id/tv_captured_pokemon_item_id" />
+
             <TextView
-                android:id="@+id/tv_captured_pokemon_item_list_type"
+                android:id="@+id/tv_captured_pokemon_item_type_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                tools:text="Tipo pokemon" />
+                android:layout_marginStart="@dimen/small_horizontal_margin"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                app:layout_constraintBottom_toTopOf="@id/tv_captured_pokemon_item_height"
+                app:layout_constraintStart_toStartOf="@+id/tv_captured_pokemon_item_id"
+                app:layout_constraintTop_toBottomOf="@+id/tv_captured_pokemon_item_type"
+                tools:text="grass, poison" />
+
             <TextView
-                android:id="@+id/tv_captured_pokemon_item_list_weight"
+                android:id="@+id/tv_captured_pokemon_item_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                tools:text="Peso pokemon" />
+                android:layout_marginHorizontal="@dimen/small_horizontal_margin"
+                android:layout_marginBottom="@dimen/small_vertical_margin"
+                android:text="@string/pokemon_captured_pokemon_id"
+                android:textAppearance="?attr/textAppearanceTitleLarge"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/tv_captured_pokemon_item_type"
+                app:layout_constraintStart_toEndOf="@id/iv_captured_pokemon_item"
+                app:layout_constraintTop_toTopOf="@id/iv_captured_pokemon_item"
+                tools:text="#1" />
+
             <TextView
-                android:id="@+id/tv_captured_pokemon_item_list_height"
+                android:id="@+id/tv_captured_pokemon_item_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                tools:text="Altura pokemon" />
+                android:layout_marginTop="@dimen/small_vertical_margin"
+                android:text="@string/pokemon_captured_height"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@id/tv_captured_pokemon_item_weight"
+                app:layout_constraintStart_toStartOf="@+id/tv_captured_pokemon_item_type"
+                app:layout_constraintTop_toBottomOf="@+id/tv_captured_pokemon_item_type_list" />
+
+            <TextView
+                android:id="@+id/tv_captured_pokemon_item_height_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/extra_small_horizontal_margin"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_captured_pokemon_item_height"
+                app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_height"
+                tools:text="70" />
+
+            <TextView
+                android:id="@+id/tv_captured_pokemon_item_height_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/extra_small_horizontal_margin"
+                android:text="@string/pokemon_captured_height_unit"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_captured_pokemon_item_height"
+                app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_height_amount" />
+
+            <TextView
+                android:id="@+id/tv_captured_pokemon_item_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_vertical_margin"
+                android:text="@string/pokemon_captured_weight"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_captured_pokemon_item"
+                app:layout_constraintStart_toStartOf="@+id/tv_captured_pokemon_item_height"
+                app:layout_constraintTop_toBottomOf="@+id/tv_captured_pokemon_item_height" />
+
+            <TextView
+                android:id="@+id/tv_captured_pokemon_item_weight_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/extra_small_horizontal_margin"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_captured_pokemon_item_weight"
+                app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_weight"
+                tools:text="6,9" />
+
+            <TextView
+                android:id="@+id/tv_captured_pokemon_item_weight_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/extra_small_horizontal_margin"
+                android:text="@string/pokemon_captured_weight_unit"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tv_captured_pokemon_item_weight"
+                app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_weight_amount" />
+
             <Button
-                android:id ="@+id/btn_captured_pokemon_item_list_delete"
+                android:id="@+id/iconButton"
+                style="?attr/materialIconButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginHorizontal="@dimen/small_horizontal_margin"
+                android:contentDescription=""
+                android:padding="@dimen/default_padding"
+                app:icon="@drawable/ic_delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_name"
+                app:layout_constraintTop_toTopOf="@+id/iv_captured_pokemon_item" />
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </com.google.android.material.card.MaterialCardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
