--- a/app/src/main/res/layout/card_list_pokedex_item.xml
+++ b/app/src/main/res/layout/card_list_pokedex_item.xml
@@ -1,46 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <com.google.android.material.card.MaterialCardView
 
         android:id="@+id/cv_pokedex_list"
+        style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:backgroundTint="?attr/colorSurface"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="5dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_pokedex_item_list"
-                android:layout_width="145dp"
-                android:layout_height="145dp"
-                android:contentDescription="@string/pokedex_view_card_view_image_description"
-                android:scaleType="centerCrop"
-                tools:srcCompat="@tools:sample/avatars" />
+            android:padding="@dimen/medium_padding"
+            app:layout_constraintBottom_toTopOf="@+id/tv_pokedex_item_list_name"
+            app:layout_constraintTop_toTopOf="@+id/tv_pokedex_item_list_name">
 
             <TextView
                 android:id="@+id/tv_pokedex_item_list_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="?attr/colorOnSurface"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
+                android:paddingVertical="@dimen/medium_padding"
+                android:textColor="?attr/colorOnSurface"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_pokeball_item_list"
+                app:layout_constraintEnd_toStartOf="@+id/iv_pokeball_item_list"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/iv_pokeball_item_list"
                 tools:text="Nombre pokemon" />
 
+            <ImageView
+                android:id="@+id/iv_pokeball_item_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/pokedex_view_card_view_image_description"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/pokeball_off"
+                tools:srcCompat="@drawable/pokeball_on" />
 
-        </LinearLayout>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
