--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,33 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/frameLayout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".ui.SettingsFragment">
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/tv_settings_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_vertical_margin"
+        android:text="@string/settings_title"
+        android:textAppearance="?attr/textAppearanceTitleMedium"
+        app:layout_constraintBottom_toTopOf="@id/tv_language"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
+        android:id="@+id/tv_language"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/small_padding"
+        android:paddingVertical="@dimen/default_padding"
+        android:text="@string/settings_language"
+        android:textAppearance="?attr/textAppearanceBodyLarge"
+        app:drawableEndCompat="@drawable/ic_arrow_right"
+        app:drawableStartCompat="@drawable/ic_language"
+        app:drawableTint="?attr/colorOnBackground"
+        app:layout_constraintBottom_toTopOf="@+id/tv_delete_pokemon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_settings_title" />
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="53dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="64dp"
-        android:text="@string/tv_settings"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/tv_delete_pokemon"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/small_padding"
 
-    <Button
-        android:id="@+id/logout_button"
+        android:paddingVertical="@dimen/default_padding"
+        android:text="@string/settings_delete_pokemon_switch"
+        android:textAppearance="?attr/textAppearanceBodyLarge"
+        app:drawableStartCompat="@drawable/ic_close"
+        app:layout_constraintBottom_toTopOf="@id/tv_about"
+        app:layout_constraintEnd_toStartOf="@+id/switch_delete_pokemon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_language" />
+
+    <com.google.android.material.materialswitch.MaterialSwitch
+        android:id="@+id/switch_delete_pokemon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="320dp"
-        android:text="@string/btn_settings"
+        app:layout_constraintBottom_toBottomOf="@id/tv_delete_pokemon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_delete_pokemon" />
+
+    <TextView
+        android:id="@+id/tv_about"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/small_padding"
+        android:paddingVertical="@dimen/default_padding"
+        android:text="@string/settings_about_me"
+        android:textAppearance="?attr/textAppearanceBodyLarge"
+        app:drawableEndCompat="@drawable/ic_arrow_right"
+        app:drawableStartCompat="@drawable/ic_info"
+        app:drawableTint="?attr/colorOnBackground"
+        app:layout_constraintBottom_toTopOf="@+id/tv_logout_btn"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_delete_pokemon" />
+
+    <TextView
+        android:id="@+id/tv_logout_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/small_padding"
+        android:paddingVertical="@dimen/default_padding"
+        android:text="@string/settings_logout"
+        android:textAppearance="?attr/textAppearanceBodyLarge"
+        app:drawableEndCompat="@drawable/ic_arrow_right"
+        app:drawableStartCompat="@drawable/ic_logout"
+        app:drawableTint="?attr/colorOnBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_about" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
