--- a/app/src/main/res/layout/card_list_captured_pokemon_item.xml
+++ b/app/src/main/res/layout/card_list_captured_pokemon_item.xml
@@ -149,7 +149,7 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_captured_pokemon_item_weight_amount" />
 
             <Button
-                android:id="@+id/iconButton"
+                android:id="@+id/btn_captured_pokemon_delete"
                 style="?attr/materialIconButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
