--- a/app/src/main/res/navigation/nav_captured_pokemon.xml
+++ b/app/src/main/res/navigation/nav_captured_pokemon.xml
@@ -17,5 +17,24 @@
         android:id="@+id/pokemonDetailFragment"
         android:name="com.yinya.bellidoserranadrianapmdm03.ui.PokemonDetailFragment"
         android:label="fragment_pokemon_detail"
-        tools:layout="@layout/fragment_pokemon_detail" />
+        tools:layout="@layout/fragment_pokemon_detail" >
+        <argument
+            android:name="imageUrl"
+            app:argType="string" />
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="weight"
+            app:argType="string" />
+        <argument
+            android:name="height"
+            app:argType="string" />
+        <argument
+            android:name="type1"
+            app:argType="string" />
+        <argument
+            android:name="type2"
+            app:argType="string" />
+    </fragment>
 </navigation>
